# SFML-Project

./: .gitignore  CMakeLists.txt  README.md  buildAndRun.bat
LightYears/: CMakeLists.txt
LightYears/src/: main.cpp
LightYearsEngine/: CMakeLists.txt
LightYearsEngine/include/: EntryPoint.h
LightYearsEngine/include/VFX/: Particle.h
LightYearsEngine/include/framework/: Actor.h  Application.h  AssetManager.h  BackdropActor.h  BackgroundLayer.h  Core.h  Delegate.h  MathUtility.h  Object.h  PhysicsSystem.h  TimerManager.h  World.h
LightYearsEngine/include/gameplay/: GameStage.h  WaitStage.h
LightYearsEngine/include/widgets/: Button.h  HUD.h  ImageWidget.h  TextWidget.h  ValueGuage.h  Widget.h
LightYearsEngine/src/: EntryPoint.cpp
LightYearsEngine/src/VFX/: Particle.cpp
LightYearsEngine/src/framework/: Actor.cpp  Application.cpp  AssetManager.cpp  BackdropActor.cpp  BackgroundLayer.cpp  MathUtility.cpp  Object.cpp  PhysicsSystem.cpp  TimerManager.cpp  World.cpp
LightYearsEngine/src/gameplay/: GameStage.cpp  WaitStage.cpp
LightYearsEngine/src/widgets/: Button.cpp  HUD.cpp  ImageWidget.cpp  TextWidget.cpp  ValueGuage.cpp  Widget.cpp
LightYearsGame/: CMakeLists.txt  config.h.in
LightYearsGame/include/: config.h
LightYearsGame/include/Enemy/: Boss.h  BossStage.h  ChaosStage.h  EnemySpaceship.h  Hexagon.h  HexagonStage.h  TwinBlade.h  TwinBladeStage.h  UFO.h  UFOStage.h  Vanguard.h  VanguardStage.h
LightYearsGame/include/Level/: GameLevelOne.h  MainMenuLevel.h
LightYearsGame/include/VFX/: Explosion.h
LightYearsGame/include/player/: Player.h  (+3 more)
(+39 files in other folders)
